--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,6 @@
         "lib/slick.jar",
     ],
     //set windowsdll path for lwjgl, allow for more memory to be used as well as a larger initial heap size
-    "java.debug.settings.vmArgs": "-Djava.library.path=lib/windowsdll -Xmx32M -Xms16M",
+    "java.debug.settings.vmArgs": "-Djava.library.path=lib/windowsdll -Xmx2G -Xms512M",
 
 }
